<resources>
    <!-- Labels -->
    <string name="app_name">Launcher</string>
    <string name="settings">Settings</string>
    <string name="uninstall">Uninstall</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="pinned_items">Pinned items</string>
    <string name="configurable_shortcuts">Configurable Shortcuts</string>
    <string name="widgets">Widgets</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="ellipses">&#8230;</string>

    <!-- Filters -->
    <string name="all">All</string>
    <string name="personal">Personal</string>
    <string name="work">Work</string>
    <string name="hidden">Hidden</string>

    <!-- Error messages -->
    <string name="widget_permission_denied">Cannot bind widget without permission</string>
    <string name="widget_configuration_failed">Widget configuration was unsuccessful</string>

    <!-- Notifications -->
    <string name="pinned_shortcut">Pinned shortcut</string>
    <string name="unpinned_shortcut">Unpinned shortcut</string>
    <string name="pinned_widget">Pinned widget</string>
    <string name="work_profile_enabled">Work profile turned on</string>

    <!-- Actions -->
    <string name="search">Search</string>
    <string name="pin_shortcut">Shortcut</string>
    <string name="pin_widget">Widget</string>
    <string name="pin_items">Pin items</string>
    <string name="remove_widget">Remove widget</string>
    <string name="configure_widget">Configure widget</string>
    <string name="finish_editing">Finish editing</string>
    <string name="change_height">Change height</string>
    <string name="change_position">Change position</string>
    <string name="show_personal">Show personal apps</string>
    <string name="show_work">Show work apps</string>
    <string name="show_hidden">Show hidden apps</string>
    <string name="hide_hidden">Stop showing hidden apps</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="turn_on_work_profile_title">Turn on work profile?</string>
    <string name="turn_off_work_profile_title">Turn off work profile?</string>
    <string name="turn_on_work_profile">Turn on work profile</string>
    <string name="turn_off_work_profile">Turn off work profile</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_by_category">Sort by category</string>
    <string name="add_item">Add item</string>
    <string name="unpin_shortcut">Unpin shortcut?</string>
    <string name="unpin">Unpin</string>

    <!-- Categories -->
    <string name="accessibility">Accessibility</string>
    <string name="audio">Audio</string>
    <string name="games">Games</string>
    <string name="images">Images</string>
    <string name="maps">Maps</string>
    <string name="news">News</string>
    <string name="productivity">Productivity</string>
    <string name="social">Social</string>
    <string name="video">Video</string>
    <string name="other">Other</string>
</resources>
