<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/remove_widget"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/remove_widget"
        app:drawableStartCompat="@drawable/ic_baseline_delete_forever_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/change_position"
            app:drawableStartCompat="@drawable/baseline_swap_vert_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/move_down"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_arrow_downward_24"
            app:iconSize="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/move_up"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_arrow_upward_24"
            app:iconSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/change_height"
            app:drawableStartCompat="@drawable/baseline_expand_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/decrease_height"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:icon="@drawable/baseline_remove_24"
            app:iconSize="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/increase_height"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:icon="@drawable/baseline_add_24"
            app:iconSize="24dp" />

    </LinearLayout>

</LinearLayout>
